# myparsing

./: main.py  pyproject.toml  requirements.txt
