[tool.poetry]
name = "myparsing"
version = "0.1.0"
description = ""
authors = ["Svichkariov <svichkariov@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
logging = "^0.4.9.6"
aiohttp = "^3.8.4"
useragent = "^0.1.1"
pysimplegui = "^4.60.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
